<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:id="@+id/local_user_regist_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="0">
            <TableRow>
            <android.support.design.widget.TextInputLayout
            android:id="@+id/login_site_TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_site_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/login_site"
                android:singleLine="true"
                />

            </android.support.design.widget.TextInputLayout></TableRow>
            <TableRow>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/Login_user_name_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Login_user_name_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/login_user_name"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout></TableRow>
            <TableRow>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_password_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/login_password"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout></TableRow>
            <TableRow>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/question1_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/question1_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/question1"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout></TableRow>
            <TableRow>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/answer1_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/answer1_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/answer1"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout></TableRow>
            <TableRow>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/question2_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/question2_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/question2"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout></TableRow>
            <TableRow>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/answer2_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/answer2_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/answer2"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout></TableRow>
            <TableRow>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/question3_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/question3_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/question3"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout></TableRow>
            <TableRow>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/answer3_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/answer3_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/answer3"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout></TableRow>
            <TableRow>
            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/add_button"/></TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>
