<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hanyao.passwordmanager.activity.DisplayPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/site"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/site_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/login_name"
                    android:gravity="center"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:gravity="center"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/password_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/show_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/show_question"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:id="@+id/question1_ly"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/question1_show"
                    android:gravity="center"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/qusetion1_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/answer1_ly"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/answer"
                    android:gravity="center"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/answer1_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/question2_ly"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/question2_show"
                    android:gravity="center"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/qusetion2_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/answer2_ly"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/answer"
                    android:gravity="center"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/answer2_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/question3_ly"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/question3_show"
                    android:gravity="center"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/qusetion3_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/answer3_ly"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/answer"
                    android:gravity="center"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/answer3_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textColor="@color/black"/>
            </LinearLayout>


            <Button
                android:id="@+id/copy_button"

                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_button"/>

            <Button
                android:id="@+id/modify_button_in_display"

                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modify_button"/>

            <Button
                android:id="@+id/delete_button"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_button"/>



        </LinearLayout></ScrollView>



</LinearLayout>

