<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hanyao.passwordmanager.activity.LocalUserRegistActivity">



    <ScrollView
        android:id="@+id/local_user_regist_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/regist_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="#2196F3"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:text="@string/welcome"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/colorAccent"
                    android:text="@string/regist_password_lb"
                     />
                <Switch
                    android:id="@+id/switch_password_displaying"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content"></Switch>

            </RelativeLayout>
                <com.jungly.gridpasswordview.GridPasswordView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    app:gpvTextColor="#2196F3"
                    app:gpvTextSize="25sp"
                    app:gpvLineColor="#2196F3"
                    app:gpvLineWidth="1dp"
                    app:gpvGridColor="#ffffff"
                    app:gpvPasswordLength="8"
                    app:gpvPasswordType="textPassword"
                    />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/repeat_regist_password_lb"/>
            <com.jungly.gridpasswordview.GridPasswordView
                android:id="@+id/repeat_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:gpvTextColor="#2196F3"
                app:gpvTextSize="25sp"
                app:gpvLineColor="#2196F3"
                app:gpvLineWidth="1dp"
                app:gpvGridColor="#ffffff"
                app:gpvPasswordLength="8"
                app:gpvPasswordType="textPassword"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/regist_tip"/>



            <Button
                android:id="@+id/regist_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/regist_button"
                android:textStyle="bold" />
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
